[package]
name = "push_crate"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
async-trait = "0.1.83"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
ethers = {version = "2.0.14"}
hex = "0.4.3"
hkdf = "0.12.4"
pgp-lib = "1.0.0"
rand = "0.8.5"
reqwest = {version = "0.12.9",  features = ["json"]}
rsa = "0.9.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tiny-keccak = "2.0.2"
tokio = {version ="1.41.1", features = ["full"]}
uuid = "1.11.0"


[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
